<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.example.deliverywala.viewmodels.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo_b"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/txtSubmit"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/button_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    style="@style/rounded_edittext_proxima_nova_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Add Food Item"
                    android:textAllCaps="true"
                    android:textColor="@color/app_color_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lFineLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtFine"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_layout_white"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtBus"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="Food Item Code"
                                android:textColor="@color/app_color_dark"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/txtBusDetails"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical"
                                android:text="Food Auto Item Code"
                                android:textAllCaps="true"
                                android:textColor="@color/app_color"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColorHint="@color/app_color"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtName"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/PersonName"
                                android:imeOptions="actionNext"
                                android:paddingLeft="15sp"
                                android:text=""
                                android:textColor="@color/text_color2"
                                android:textColorHint="@color/app_color"
                                android:textSize="13sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColorHint="@color/app_color"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtAmount"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/amount"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:paddingLeft="15sp"
                                android:text=""
                                android:textColor="@color/text_color2"
                                android:textColorHint="@color/app_color"
                                android:textSize="13sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_margin="5dp"

                            android:textColorHint="@color/app_color"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtdescritption"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="top|left"
                                android:hint="@string/descritption"
                                android:imeOptions="actionNext"
                                android:paddingLeft="15sp"
                                android:paddingTop="10dp"
                                android:text=""
                                android:textColor="@color/text_color2"
                                android:textColorHint="@color/app_color"
                                android:textSize="13sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColorHint="@color/app_color"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtNetWeight"
                                style="@style/rounded_edittext_proxima_nova_reg"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/netWeight"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:paddingLeft="15sp"
                                android:text=""
                                android:textColor="@color/text_color2"
                                android:textColorHint="@color/app_color"
                                android:textSize="13sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/txtAtt"
                            style="@style/rounded_edittext_proxima_nova_reg"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="Attachment :"
                            android:textColor="@color/app_color_dark"
                            android:textSize="13sp" />

                        <LinearLayout
                            android:id="@+id/lattach"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_toRightOf="@+id/txtAtt"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/rFoodImage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/border_layout_white"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <TextView
                                    android:id="@+id/txtBrowse"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:background="@drawable/round_mu_border"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:paddingLeft="15dp"
                                    android:paddingTop="5dp"

                                    android:paddingRight="15dp"
                                    android:paddingBottom="5dp"
                                    android:text="CHOOSE FILE"
                                    android:textColor="@android:color/white"
                                    android:textSize="13sp" />

                                <TextView
                                    android:id="@+id/txtFileSelected"
                                    style="@style/rounded_edittext_proxima_nova_reg"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@+id/txtBrowse"
                                    android:gravity="center"
                                    android:text="No File selected"
                                    android:textColor="@color/app_color_dark"
                                    android:textSize="13sp" />
                            </RelativeLayout>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardImage"
                                android:layout_width="60dp"
                                android:layout_height="70dp"
                                android:layout_centerVertical="true"
                                android:layout_margin="6dp"
                                android:visibility="gone"
                                card_view:cardCornerRadius="10dp"
                                card_view:cardElevation="2dp">

                                <ImageView
                                    android:id="@+id/imgProfile"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:adjustViewBounds="true"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_logo_new" />
                            </androidx.cardview.widget.CardView>

                        </LinearLayout>


                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/txtSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_mu_border"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="S U B M I T"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>